--- a/VarnishMixApp.csproj
+++ b/VarnishMixApp.csproj
@@ -186,9 +186,9 @@
     <Compile Include="Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\20210224222256_InitialMigration.cs" />
-    <Compile Include="Migrations\20210224222256_InitialMigration.designer.cs">
-      <DependentUpon>20210224222256_InitialMigration.cs</DependentUpon>
+    <Compile Include="Migrations\20210301175639_InitialMigration.cs" />
+    <Compile Include="Migrations\20210301175639_InitialMigration.designer.cs">
+      <DependentUpon>20210301175639_InitialMigration.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\DatabaseObjectContextModelSnapshot.cs" />
     <Compile Include="ProductCalculation.cs" />
@@ -208,7 +208,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="Database.db" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
@@ -227,6 +226,7 @@
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.113.3\build\net46\Stub.System.Data.SQLite.Core.NetFramework.targets" Condition="Exists('..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.113.3\build\net46\Stub.System.Data.SQLite.Core.NetFramework.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
