--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Common.Logging" version="3.4.1" targetFramework="net461" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net461" />
+  <package id="itext7" version="7.1.14" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net461" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net461" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net461" />
@@ -27,6 +30,7 @@
   <package id="Microsoft.Extensions.Options" version="3.1.12" targetFramework="net461" />
   <package id="Microsoft.Extensions.Primitives" version="3.1.12" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
+  <package id="Portable.BouncyCastle" version="1.8.9" targetFramework="net461" />
   <package id="SQLitePCLRaw.bundle_e_sqlite3" version="2.0.4" targetFramework="net461" />
   <package id="SQLitePCLRaw.core" version="2.0.4" targetFramework="net461" />
   <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.0.4" targetFramework="net461" />
