--- a/VarnishMixApp.csproj
+++ b/VarnishMixApp.csproj
@@ -213,21 +213,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdditionalProduct.cs" />
-    <Compile Include="AddToDatabaseForm.cs">
+    <Compile Include="AddToDatabaseWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddToDatabaseForm.Designer.cs">
-      <DependentUpon>AddToDatabaseForm.cs</DependentUpon>
+    <Compile Include="AddToDatabaseWindow.Designer.cs">
+      <DependentUpon>AddToDatabaseWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="BaseProduct.cs" />
     <Compile Include="CalculatedProduct.cs" />
     <Compile Include="CalculatedProductList.cs" />
     <Compile Include="DatabaseObjectContext.cs" />
-    <Compile Include="DeleteFromDatabase.cs">
+    <Compile Include="DeleteFromDatabaseWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DeleteFromDatabase.Designer.cs">
-      <DependentUpon>DeleteFromDatabase.cs</DependentUpon>
+    <Compile Include="DeleteFromDatabaseWindow.Designer.cs">
+      <DependentUpon>DeleteFromDatabaseWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
@@ -250,11 +250,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validators.cs" />
-    <EmbeddedResource Include="AddToDatabaseForm.resx">
-      <DependentUpon>AddToDatabaseForm.cs</DependentUpon>
+    <EmbeddedResource Include="AddToDatabaseWindow.resx">
+      <DependentUpon>AddToDatabaseWindow.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="DeleteFromDatabase.resx">
-      <DependentUpon>DeleteFromDatabase.cs</DependentUpon>
+    <EmbeddedResource Include="DeleteFromDatabaseWindow.resx">
+      <DependentUpon>DeleteFromDatabaseWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
